Fix validator html

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -9,9 +9,9 @@
 
 <div id="top"></div>
 
-<script type="text/javascript" src="/themes/sansa/public/js/all.js"></script>
+<script src="/themes/sansa/public/js/all.js"></script>
 
-<script type="text/javascript">
+<script>
     WebFontConfig = {
         google: {families: ['PT+Sans+Narrow:400,700', 'Source+Sans+Pro:400,600,400italic,700italic,700:latin', 'PT+Sans:400latin,400cyrillic,700latin,700cyrillic']}
     };
