--- a/views/online.ejs
+++ b/views/online.ejs
@@ -136,7 +136,7 @@
                             <li class="complaint not-tab"><a href="javascript:void(0)" id="watchLater">Досмотреть позже</a></li>
                         </ul>
 
-                        <div style="position: relative; height: 370px;">
+                        <div id="cinemapress-player">
                             <% if (page.player) { %>
                             <%- page.player %>
                             <% } %>
