--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -142,7 +142,7 @@
                             <li class="complaint not-tab watchLaterBlock" style="display: none;"><a href="javascript:void(0)" id="watchLater">Досмотреть позже</a></li>
                         </ul>
 
-                        <div id="cinemapress-player">
+                        <div id="cinemapress-player" style="width: 683px;">
                             <% if (page.player) { %>
                             <%- page.player %>
                             <% } %>
