--- a/views/category.ejs
+++ b/views/category.ejs
@@ -84,7 +84,17 @@
                 </div>
             </div>
         </div>
+        <div style="clear: both;"></div>
         <% } %>
+
+        <div class="randomMovieCategory">
+            <div class="cinemapress-random-category"
+                 onclick="window.location.href='<%- page.url %>?random'">
+                <img src="/themes/sansa/public/images/dice.svg" alt="<%- page.l.random %>">
+                <span><%- page.l.lucky %></span>
+                <small><%- page.l.random %></small>
+            </div>
+        </div>
 
         <% if (typeof page.sorting === 'object') { %>
         <div class="sortn">
@@ -98,6 +108,7 @@
                 <% }); %>
             </div>
         </div>
+        <div style="clear: both;"></div>
         <% } %>
 
         <div id="cinemapress-content">
