--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,6 +1,6 @@
 <div class="content">
     <ul>
-        <li style="color: #fff">&copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.org" target="_blank">CinemaPress&nbsp;ACMS</a></li>
+        <li style="color: #fff">&copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.io" target="_blank">CinemaPress</a></li>
         <li><a href="/"><%- page.l.home %></a></li>
         <li style="color: #ccc">Email: <span id="mylo">Activate JS</span><script>(function(d,i,l,r){d.getElementById(i).innerHTML=l+'@'+r;})(window.document,'mylo','<%- page.email.split('@')[0] %>','<%- page.email.split('@')[1] %>');</script></li>
         <li class="top" id="back-top"><a href="#top" id="top_footer" rel="nofollow"><%- page.l.up %></a></li>
@@ -9,7 +9,7 @@
 
 <div id="top"></div>
 
-<script src="/themes/sansa/public/js/all.js"></script>
+<script src="/themes/sansa/public/js/all.min.js"></script>
 
 <script>
     WebFontConfig = {
