--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -3,6 +3,6 @@
 <meta name="description" content="<%= page.description %>">
 <link rel="shortcut icon" href="/themes/sansa/public/favicon.ico?v=<%- page.ver %>">
 
-<link href="/themes/sansa/public/css/all.css?v=<%- page.ver %>" type="text/css" rel="stylesheet">
+<link href="/themes/sansa/public/css/all.min.css?v=<%- page.ver %>" type="text/css" rel="stylesheet">
 
 <%- page.codes.head %>
