Fixed cache posters

--- a/views/download.ejs
+++ b/views/download.ejs
@@ -53,7 +53,7 @@
 
                 <div class="poster_m">
                     <div class="poster_main">
-                        <div class="poster_main_2"><img src="<%- movie.poster %>" alt="<%= page.title %>" title="<%= page.title %>" id="cinemapress-poster"></div>
+                        <div class="poster_main_2"><img src="<%- movie.poster %>" alt="<%= page.title %>" title="<%= page.title %>" data-cinemapress-poster="<%- movie.poster %>"></div>
                     </div>
                 </div>
 
