--- a/views/download.ejs
+++ b/views/download.ejs
@@ -101,6 +101,12 @@
                         <%- movie.actors_url %>
                     </div>
                     <% } %>
+                    <% if (movie.tags_url) { %>
+                    <div class="bcenter">
+                        <p class="title"><%- page.l.tags %></p>
+                        <%- movie.tags_url %>
+                    </div>
+                    <% } %>
 
                 </div>
 
@@ -189,7 +195,7 @@
             <% contents.forEach(function (content) { %>
             <div style="float: left; width: 50%;">
                 <div style="margin: 0; padding: 10px">
-                    <a href="<%- content.url %>" class="cinemapress-news" style="background-image:url(<%- content.image %>);">
+                    <a href="<%- content.url %>" class="cinemapress-news" style="background-image:url('<%- content.image %>');">
                         <div class="cinemapress-news-title">
                             <%= content.title %>
                         </div>
@@ -210,9 +216,9 @@
                         <%- category.name %>
                         <div class="randomMovieRelated">
                             <div class="cinemapress-random-related"
-                                 onclick="window.location.href='<%- category.url %>?random'"
+                                 onclick="window.location.href='<%- (category.url.indexOf('?')+1 ? category.url + '&random' : category.url + '?random') %>'"
                                  title="<%- page.l.random %>">
-                                <img src="/themes/sansa/public/images/dice.svg" alt="<%- page.l.random %>">
+                                <img src="/themes/<%- page.theme %>/public/images/dice.svg" alt="<%- page.l.random %>">
                             </div>
                         </div>
                     </h4>
