--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -9,7 +9,7 @@
 
 <div id="top"></div>
 
-<script src="/themes/sansa/public/js/all.min.js"></script>
+<script src="/themes/<%- page.theme %>/public/js/all.min.js"></script>
 
 <script>
     WebFontConfig = {
