--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -1,8 +1,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title><%= page.title %></title>
 <meta name="description" content="<%= page.description %>">
-<link rel="shortcut icon" href="/themes/sansa/public/favicon.ico?v=<%- page.ver %>">
+<link rel="shortcut icon" href="/themes/<%- page.theme %>/public/favicon.ico?v=<%- page.ver %>">
 
-<link href="/themes/sansa/public/css/all.min.css?v=<%- page.ver %>" type="text/css" rel="stylesheet">
+<link href="/themes/<%- page.theme %>/public/css/all.min.css?v=<%- page.ver %>" type="text/css" rel="stylesheet">
 
 <%- page.codes.head %>
