Added episodes to sidebar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
 
             <% if (typeof index === 'object') {
                 for (var type in index) {
-                    if (index.hasOwnProperty(type) && index[type].length) {
+                    if (index.hasOwnProperty(type) && index[type].length && type !== 'episode') {
                         index[type].forEach(function (category) { %>
 
             <div class="category-name_2">
