--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -59,6 +59,32 @@
 
 </div>
 
+<% if (typeof index === 'object') {
+        for (var type in index) {
+if (index.hasOwnProperty(type) && index[type].length && type === 'episode') {
+index[type].forEach(function (category) { %>
+
+    <div class="new-items new_sb">
+
+        <div style="margin: 0 0 30px 0;color: #fff;font-size: 20px;font-weight: bold;"><%- category.name %></div>
+
+        <% if (category.movies.length) {
+        category.movies.forEach(function (movie) { %>
+
+            ﻿<div class="item">
+                <div class="poster">
+                    <div class="sc_info"><% if (movie.season && movie.episode) { %><%- movie.season %> <%- page.l.season %> <%- movie.episode %> <%- page.l.episode %><br><% if (movie.translate) { %><%- movie.translate %><% } %><% } %></div>
+                    <a href="<%- movie.url %>"><img src="<%- movie.poster %>" alt="<%= movie.title %>" title="<%= movie.title %>"></a>
+                </div>
+                <div class="link"><a href="<%- movie.url %>"><%= movie.title %></a></div>
+            </div>
+
+        <% }); } %>
+
+    </div>
+
+<% }); } } } %>
+
 <% if (typeof soon === 'object' && soon.length) { %>
 
 <div class="new-items new_sb">
@@ -70,7 +96,7 @@
     ﻿<div class="item">
         <div class="poster">
             <div class="sc_info"><%- page.l.premiere %><br> <%- movie.premiere %></div>
-            <a href="<%- movie.url %>" rel="nofollow"><img src="<%- movie.poster %>" alt="<%= movie.title %>" title="<%= movie.title %>"></a>
+            <a href="<%- movie.url %>"><img src="<%- movie.poster %>" alt="<%= movie.title %>" title="<%= movie.title %>"></a>
         </div>
         <div class="link"><a href="<%- movie.url %>"><%= movie.title %></a></div>
     </div>
