--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -7,11 +7,11 @@
         <ul>
             <li><a href="/<%- page.urls.genre %>"><%- page.l.allGenres %></a></li>
             <% page.urls.genres.forEach(function(genre) { %>
-            <li>
-                <a href="<%- genre.url %>">
-                    <%- genre.title %>
-                </a>
-            </li>
+                <li>
+                    <a href="<%- genre.url %>">
+                        <%- genre.title %>
+                    </a>
+                </li>
             <% }); %>
         </ul>
     </div>
@@ -25,11 +25,11 @@
             <ul>
                 <li><a href="/<%- page.urls.year %>"><%- page.l.allYears %></a></li>
                 <% page.urls.years.slice(0,10).forEach(function(year) { %>
-                <li>
-                    <a href="<%- year.url %>">
-                        <%- year.title %>
-                    </a>
-                </li>
+                    <li>
+                        <a href="<%- year.url %>">
+                            <%- year.title %>
+                        </a>
+                    </li>
                 <% }); %>
             </ul>
         </div>
@@ -38,11 +38,11 @@
             <ul>
                 <li><a href="/<%- page.urls.country %>"><%- page.l.allCountries %></a></li>
                 <% page.urls.countries.slice(0,10).forEach(function(country) { %>
-                <li>
-                    <a href="<%- country.url %>">
-                        <%- country.title %>
-                    </a>
-                </li>
+                    <li>
+                        <a href="<%- country.url %>">
+                            <%- country.title %>
+                        </a>
+                    </li>
                 <% }); %>
             </ul>
         </div>
@@ -87,79 +87,79 @@ index[type].forEach(function (category) { %>
 
 <% if (typeof soon === 'object' && soon.length) { %>
 
-<div class="new-items new_sb">
+    <div class="new-items new_sb">
 
-    <div style="margin: 0 0 30px 0;color: #fff;font-size: 20px;font-weight: bold;"><%- page.l.soon %></div>
+        <div style="margin: 0 0 30px 0;color: #fff;font-size: 20px;font-weight: bold;"><%- page.l.soon %></div>
 
-    <% soon.forEach(function (movie) { %>
+        <% soon.forEach(function (movie) { %>
 
-    ﻿<div class="item">
-        <div class="poster">
-            <div class="sc_info"><%- page.l.premiere %><br> <%- movie.premiere %></div>
-            <a href="<%- movie.url %>"><img src="<%- movie.poster %>" alt="<%= movie.title %>" title="<%= movie.title %>"></a>
-        </div>
-        <div class="link"><a href="<%- movie.url %>"><%= movie.title %></a></div>
+            ﻿<div class="item">
+                <div class="poster">
+                    <div class="sc_info"><%- page.l.premiere %><br> <%- movie.premiere %></div>
+                    <a href="<%- movie.url %>"><img src="<%- movie.poster %>" alt="<%= movie.title %>" title="<%= movie.title %>"></a>
+                </div>
+                <div class="link"><a href="<%- movie.url %>"><%= movie.title %></a></div>
+            </div>
+
+        <% }); %>
+
     </div>
-
-    <% }); %>
-
-</div>
 
 <% } %>
 
 <% if (typeof news === 'object' && news.length) { %>
-<% news.forEach(function (content) { %>
-<div style="float: left; width: 100%;">
-    <div style="margin: 0; padding: 10px 0 10px 10px">
-        <a href="<%- content.url %>" class="cinemapress-news" style="background-image:url('<%- content.image %>');">
-            <div class="cinemapress-news-title">
-                <%= content.title %>
+    <% news.forEach(function (content) { %>
+        <div style="float: left; width: 100%;">
+            <div style="margin: 0; padding: 10px 0 10px 10px">
+                <a href="<%- content.url %>" class="cinemapress-news" style="background-image:url('<%- content.image %>');">
+                    <div class="cinemapress-news-title">
+                        <%= content.title %>
+                    </div>
+                </a>
             </div>
-        </a>
-    </div>
-</div>
-<% }); %>
-<div style="clear: both"></div>
+        </div>
+    <% }); %>
+    <div style="clear: both"></div>
 <% } %>
 
 <% if (typeof page.adv === 'object' && page.adv.left) { %>
-<div style="clear: both;"></div>
-<div style="text-align: center; margin: 10px auto">
-    <%- page.adv.left %>
-</div>
-<div style="clear: both;"></div>
+    <div style="clear: both;"></div>
+    <div style="text-align: center; margin: 10px auto">
+        <%- page.adv.left %>
+    </div>
+    <div style="clear: both;"></div>
 <% } %>
 
 <% if (typeof recent === 'object' && recent.length) { %>
-<% recent.forEach(function (comment) { %>
-<div style="margin: 10px 0 10px 10px;">
-    <div class="cinemapress-recent" style="background: none; border: 0;">
-        <div class="cinemapress-recent-head">
-            <% if (comment.avatar) { %>
-            <div class="cinemapress-recent-head-avatar" style="background: #215EC3; border: 5px #215EC3 solid;">
-                <img src="<%- comment.avatar %>" alt="<%- comment.user %>">
-            </div>
-            <% } %>
-            <div class="cinemapress-recent-head-meta">
-                <div>
-                    <a href="<%- comment.url %>" style="color: #215EC3"><%= comment.title %></a>
+    <% recent.forEach(function (comment) { %>
+        <div style="margin: 10px 0 10px 10px;">
+            <div class="cinemapress-comment">
+                <div class="cinemapress-comment-head">
+                    <div class="cinemapress-comment-head-avatar">
+                        <img src="<%- comment.avatar %>" alt="<%= comment.user %>">
+                    </div>
+                    <div class="cinemapress-comment-head-meta">
+                        <div class="cinemapress-comment-head-meta-title">
+                            <a href="<%- comment.url %>" title="<%= comment.title %>"><%= comment.title %></a>
+                        </div>
+                        <div class="cinemapress-comment-user" data-comment-id="<%- comment.id %>">
+                            <div class="cinemapress-comment-user-name">
+                                <%- comment.user %>
+                            </div><div class="cinemapress-comment-user-said">
+                                <%- page.l.said %>
+                            </div><div class="cinemapress-comment-user-date">
+                                <%- comment.date %>
+                            </div><div class="cinemapress-comment-user-link">
+                                <a href="<%- comment.url %>#c<%- comment.id %>" title="<%= comment.title %>">#</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <span>
-                        <%- comment.user %>
-                    </span><span>
-                        <%- page.l.said %>
-                    </span><span>
-                        <%- comment.date %>
-                    </span>
+                <div class="cinemapress-comment-bg cinemapress-comment-radius">
+                    <%- comment.comment %>
                 </div>
             </div>
         </div>
-        <div class="cinemapress-recent-comment" style="background: #215EC3; color: #fff">
-            <%- comment.comment %>
-        </div>
-    </div>
-</div>
-<% }); %>
-<div style="clear: both;"></div>
+    <% }); %>
+    <div style="clear: both;"></div>
 <% } %>
