--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,7 +1,7 @@
 <div class="new_head">
     <div class="head">
         <div class="logo">
-            <a href="/" rel="nofollow"><img src="/themes/<%- page.theme %>/public/images/logo.svg?v=<%- page.ver %>" alt="Logo" style="height:88px;"></a>
+            <a href="/" rel="nofollow"><img src="/themes/<%- page.theme %>/public/images/logo.svg?v=<%- page.ver %>" alt="Logo" style="height:60px;margin-top:14px"></a>
         </div>
         <div class="randomMovieMenu">
             <a href="/?random" class="dice cinemapress-random-menu" title="<%= page.l.lucky %>">
